--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "eslint": "^8.25.0",
+    "eslint-config-google": "^0.14.0",
     "stylelint": "^14.13.0",
     "stylelint-config-standard": "^28.0.0"
   }
